fix overlapping issues with the modals on the profile page

--- a/srcs/frontend/app/css/views/profile.css
+++ b/srcs/frontend/app/css/views/profile.css
@@ -35,6 +35,7 @@
 /* Profile Container */
 .profile-container {
     display: flex;
+    position: relative;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -44,6 +45,7 @@
     color: var(--primary-text-color);
     padding: 20px;
     box-sizing: border-box;
+    z-index: 1001;
 }
 
 /* Text Styling */
@@ -71,13 +73,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
+    z-index: 1002;
     opacity: 0;
     pointer-events: none;
     transition: opacity 0.3s ease;
+    display: none;
 }.profile-match-history-modal-visible {
     opacity: 1;
     pointer-events: auto;
+    display: flex;
 }.profile-match-history-modal .modal-content {
     background: var(--primary-bg-color);
     padding: 20px;
@@ -121,10 +125,10 @@
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(8px);
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
+    z-index: 1003;
     transition: opacity 0.3s ease;
 }.profile-edit-modal-content {
     background: var(--primary-bg-color);
@@ -152,6 +156,8 @@
     color: var(--primary-text-color);
 }.profile-edit-modal-visible {
     opacity: 1;
+    display: flex;
+    pointer-events: auto;
 }.profile-edit-modal {
     opacity: 0;
     pointer-events: none;
